profilelist1exp/unpackaged/objects/Proposed_Associated_Program_Vendor__c.object
<CustomObject>
    <fields>
        <fullName>Business_Segment__c</fullName>
        <label>Business Segment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Commercial</fullName>
                </value>
                <value>
                    <fullName>Consumer</fullName>
                </value>
                <value>
                    <fullName>Corporate Events</fullName>
                </value>
                <value>
                    <fullName>Global Business</fullName>
                </value>
                <value>
                    <fullName>Int&apos;l</fullName>
                </value>
                <value>
                    <fullName>Large Business</fullName>
                </value>
                <value>
                    <fullName>Medium Business</fullName>
                </value>
                <value>
                    <fullName>S&amp;P Client Peripherals</fullName>
                </value>
                <value>
                    <fullName>S&amp;P Displays</fullName>
                </value>
                <value>
                    <fullName>S&amp;P Enterprise</fullName>
                </value>
                <value>
                    <fullName>S&amp;P Imaging</fullName>
                </value>
                <value>
                    <fullName>S&amp;P Operations</fullName>
                </value>
                <value>
                    <fullName>S&amp;P Software</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
                <value>
                    <fullName>Small Business</fullName>
                </value>
                <value>
                    <fullName>WWP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MDF_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MDF Program</label>
        <referenceTo>MDF_Program__c</referenceTo>
        <relationshipName>Proposed_MDF_Programs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Proposed_MDF_Programs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program_Rate_Card_Price__c</fullName>
        <label>Program Rate Card Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Submitted for Approval</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor</label>
        <referenceTo>Vendor__c</referenceTo>
        <relationshipName>Proposed_MDF_Programs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Proposed Associated Program Vendor</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Proposed APV-{00000000}</displayFormat>
        <label>Proposed Associated Program Vendor Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Proposed  Associated Programs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>